[project]
name = "vault"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "boto3",
    "boto3-stubs[s3]",
    "cosl",
    "cryptography",
    "jinja2",
    "jsonschema",
    "ops",
    "psutil",
    "pyhcl",
    "pyopenssl",
    "pytest-interface-tester",
    "rpds-py==0.23.1",
    "hvac",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
package = true
